app/main/default/objects/Employee__c/fields/Branch__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>