app/main/default/objects/Employee__c/fields/First_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>