app/main/default/objects/Employee__c/fields/Is_Active__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>