app/main/default/objects/Employee__c/fields/Joining_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Joining Date</label>
        <type>Date</type>
    </fields>
</CustomObject>