app/main/default/objects/Employee__c/fields/Last_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>