app/main/default/objects/Employee__c/fields/Test_Value_Set__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Test_Value_Set__c</fullName>
        <label>Test Value Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>New_One</valueSetName>
        </valueSet>
    </fields>
</CustomObject>